# KDM

./: .gitattributes  RBP_benchmark_kdm.R  README.md
CODE/R-PACKAGE/: README.md
CODE/R-PACKAGE/rkdMotifs/: DESCRIPTION  NAMESPACE  cleanup  configure  configure.win
CODE/R-PACKAGE/rkdMotifs/src/geco2/: CMakeLists.txt
CODE/R-PACKAGE/rkdMotifs/src/geco2/cmake/: geco2.pc.in  geco2Config.cmake.in
CODE/R-PACKAGE/rkdMotifs/src/geco2/include/: 2bit_retriever.h  array.h  base.h  config.h  csv_helpers.hpp  csv_iterator.hpp  define.h  element.h  gBed.h  gCluster.h  gKDMotifs.h  gKmers.h  gMethods.h  gNMF.h  gPWM.h  genotype.h  ioutils.h  sequence.h  transcript.h
CODE/R-PACKAGE/rkdMotifs/src/geco2/oldstuff/: CMakeLists.txt
CODE/R-PACKAGE/rkdMotifs/src/geco2/oldstuff/cmake_old/: geco2.pc.in  geco2Config.cmake.in
CODE/R-PACKAGE/rkdMotifs/src/geco2/src/: 2bit_retriever.cpp  array.cpp  base.cpp  csv_helpers.cpp  element.cpp  gCluster.cpp  gKDMotifs.cpp  gKDMotifs.cu  gKmers.cpp  gKmers_cuda.cu  gKmers_cuda.h  gMethods.cpp  gMethods_armadillo.h  gMethods_cuda.cu  gMethods_cuda.h  gNMF.cpp  gNMF_armadillo.h  gNMF_cuda.cu  gNMF_cuda.h  gPWM.cpp  genotype.cpp  ioutils.cpp  sequence.cpp  transcript.cpp
CODE/R-PACKAGE/rkdMotifs/src/geco2/src/TFM-Pvalue/: Makefile  Matrix.cpp  Matrix.h  TFMpvalue.cpp
CODE/R-PACKAGE/rkdMotifs/src/geco2/src/armadillo/armadillo_bits/: SpMat_bones.hpp  SpMat_meat.hpp  memory.hpp
CODE/R-PACKAGE/rkdMotifs/src/geco2/src/fastcluster/: fastcluster_R_dm.cpp  fastcluster_cd.cpp  fastcluster_cd.h  fastcluster_dm.cpp
CODE/R-PACKAGE/rkdMotifs/src/geco2/test/: CMakeLists.txt  test_beds.cpp  test_counts.cpp
CODE/R-SCRIPTS/: FIGURA_01.rtx  FIGURE_03.rtx  FIGURE_04.rtx  FIGURE_06.rtx  Figure_05.rtx.R  GKM_TF-ENCODE.rtx  GKM_TF-benchmark.rtx  GRAPHPROT_RBP-ENCODE.rtx  GRAPHPROT_RBP-benchmark.rtx  KDMMAP_vs_Centrimo_RBP.rtx  KDMMAP_vs_Centrimo_TF.rtx  KDMMATCH_vs_Tomtom_RBP.rtx  KDMMATCH_vs_Tomtom_TF.rtx  KDM_RBP-ENCODE.rtx  KDM_RBP-OPTIMIZATION.rtx  KDM_RBP-benchmark.rtx  KDM_TF-ENCODE.rtx  KDM_TF-benchmark.rtx  MEME_TF-ENCODE.rtx  RBP_benchmark_kdm.R  README.md  README.md.backup  RNAPROT_RBP-ENCODE.rtx  SEQGL_TF-ENCODE.rtx  SEQGL_TF-benchmark.rtx  STREME_RBP-ENCODE.rtx
DATA/: README.md
DATA/RBP-ENCODE/: metadata.xlsx
DATA/RDATA/: DATASET_TF-benchmark.Rdata  H13INVIVO.Rdata  METADATA_FACTORBOOK.Rdata  METADATA_RBP-ENCODE.Rdata  METADATA_RBP_CISBP_ATTRACT.Rdata  METADATA_TF-ENCODE.Rdata  METADATA_TF-benchmark.Rdata  mCrossBase.Rdata
DATA/SUPPORT_FILES/: CISBP_ATtRACT.meme  H13INVIVO.meme  mCrossBase.meme
DATA/SUPPORT_FILES/PUBBL/: RgkmSVM.csv  Science Citation Index Expanded (SCIE).csv  deepbind.csv  gkmSVM.csv  graphprot.csv  homer_2010_2020.csv  ls-GKM.csv  meme.csv  rnaprot.csv  seqGL.csv
DATA/SUPPORT_FILES/RBP_BENCHMARK/: ALKBH5_Baltz2012.negatives.fa  ALKBH5_Baltz2012.positives.fa  ALKBH5_Baltz2012.test_ids  C17ORF85_Baltz2012.negatives.fa  C17ORF85_Baltz2012.positives.fa  C17ORF85_Baltz2012.test_ids  C22ORF28_Baltz2012.negatives.fa  C22ORF28_Baltz2012.positives.fa  C22ORF28_Baltz2012.test_ids  CAPRIN1_Baltz2012.negatives.fa  CAPRIN1_Baltz2012.positives.fa  CAPRIN1_Baltz2012.test_ids  CLIPSEQ_AGO2.negatives.fa  CLIPSEQ_AGO2.positives.fa  CLIPSEQ_AGO2.test_ids  CLIPSEQ_ELAVL1.negatives.fa  CLIPSEQ_ELAVL1.positives.fa  CLIPSEQ_ELAVL1.test_ids  CLIPSEQ_SFRS1.negatives.fa  CLIPSEQ_SFRS1.positives.fa  CLIPSEQ_SFRS1.test_ids  ICLIP_HNRNPC.negatives.fa  ICLIP_HNRNPC.positives.fa  ICLIP_HNRNPC.test_ids  ICLIP_TDP43.negatives.fa  ICLIP_TDP43.positives.fa  ICLIP_TDP43.test_ids  ICLIP_TIA1.negatives.fa  ICLIP_TIA1.positives.fa  ICLIP_TIA1.test_ids  ICLIP_TIAL1.negatives.fa  ICLIP_TIAL1.positives.fa  ICLIP_TIAL1.test_ids  PARCLIP_AGO1234.negatives.fa  PARCLIP_AGO1234.positives.fa  PARCLIP_AGO1234.test_ids  PARCLIP_ELAVL1.negatives.fa  PARCLIP_ELAVL1.positives.fa  PARCLIP_ELAVL1.test_ids  PARCLIP_ELAVL1A.negatives.fa  (+29 more)
DATA/SUPPORT_FILES/RBP_OPTIMIZATION/: AGGF1_HepG2.negatives.fa  AGGF1_HepG2.positives.fa  AGGF1_HepG2.test_ids  BUD13_K562.negatives.fa  BUD13_K562.positives.fa  BUD13_K562.test_ids  CSTF2T_HepG2.negatives.fa  CSTF2T_HepG2.positives.fa  CSTF2T_HepG2.test_ids  DDX55_HepG2.negatives.fa  DDX55_HepG2.positives.fa  DDX55_HepG2.test_ids  EFTUD2_HepG2.negatives.fa  EFTUD2_HepG2.positives.fa  EFTUD2_HepG2.test_ids  EWSR1_K562.negatives.fa  EWSR1_K562.positives.fa  EWSR1_K562.test_ids  FASTKD2_HepG2.negatives.fa  FASTKD2_HepG2.positives.fa  FASTKD2_HepG2.test_ids  FMR1_K562.negatives.fa  (+68 more)
DATA/TF-ENCODE/: metadata.xlsx
Rdata/: AUC_KDM.rds  KDMM_ENCSR534YOI.rds  KDMM_ENCSR893RAV.rds  KDMM_plot.rds  KDMM_plot_TF.rds  POSTAR3_human.rds  README.md
Rdata/ENCODE_Dataset/: AUC_Comparison.rds  class_all_cisbp_mcross.rds  classification.Rdata  exp_info.rds
Rdata/Paper_Figure/: IC_DNA_RNA.rds  P16_P17.Rdata  P18.Rdata  P19.rds  class_sel_kdm_wall_kdmtom.Rdata  confronto_tomtom_kdmtom_factorbook.Rdata  confronto_tomtom_kdmtom_factorbook_old.Rdata  p15.rds  p4A.rds  p9.rds
Rdata/RBP_24/: Optimization_RNAProt_30.rds  RBP24_GraphProt_AUC.rds  RBP24_annovar_data.rds
Rdata/Splicing_data/: README  README.md
Scripts/: 00_plot_functions.R  ENCODE_Dataset_AUC.R  ENCODE_Dataset_Classification.R  ENCODE_Dataset_Classification_new.R  ENCODE_KDMM.R  ENCODE_annovar.R  HEATMAP_annovar.R  Heatmap_KDMM_annovar.R  P10_RBP.R  P15_RBP.R  P16_P17_P18_RBP.R  P19_RBP.R  P22_RBP.R  P4A_P9_RBP.R  P4B_RBP.R  P6_RBP.R  P8_RBP.R  RBP24_Dataset_AUC.R  Splicing_analysis.R  Splicing_analysis_functions.R  Tools_Comparison_AUC.R  Tools_Comparison_ClassificationR.R  create_CV.R  figureA.R  figureB.R  figureC.R  figureD.R  figureE.R  generate_data_motifs.R  p10.R  p15.R  p4A_p9.R  p4B.R  windows_CV_new.R
Tables/: RBP_24_Info.tsv  m6A_regulators_mc.csv
Tables/Splicing/: RBPS_interest.txt
old/: README.md
old/Scripts/: ENCODE_Dataset_AUC.R  ENCODE_Dataset_Classification.R  ENCODE_Dataset_Classification_new.R  ENCODE_annovar.R  Heatmap_KDMM_annovar.R  IC_PWM.R  P10_RBP.R  P15_RBP.R  P4A_P9_RBP.R  P8_RBP.R  RBP24_Dataset_AUC.R  figureA.R  figureB.R  p15.R  prediction_figures.R
(+42 files in other folders)
